Resolved Checkstyle and JavaDoc issues.