@@ -13,7 +13,10 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
+
 package org.opentravel.schemacompiler.loader.impl;
+
+import org.opentravel.schemacompiler.util.URLUtils;
 
 import java.io.File;
 import java.net.MalformedURLException;
@@ -27,8 +30,6 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 
-import org.opentravel.schemacompiler.util.URLUtils;
-
 /**
  * <code>LibraryNamespaceResolver</code> implementation backed by a simple map.
  * 
@@ -36,21 +37,20 @@ import org.opentravel.schemacompiler.util.URLUtils;
  */
 public class MapLibraryNamespaceResolver extends DefaultLibraryNamespaceResolver {
 
-    private Map<URI, List<URL>> namespaceMappings = Collections
-            .synchronizedMap(new HashMap<URI, List<URL>>());
+    private Map<URI,List<URL>> namespaceMappings = Collections.synchronizedMap( new HashMap<URI,List<URL>>() );
 
     /**
-     * @see org.opentravel.schemacompiler.loader.impl.DefaultLibraryNamespaceResolver#resovleLibraryImport(java.net.URI, java.lang.String, java.lang.String[])
+     * @see org.opentravel.schemacompiler.loader.impl.DefaultLibraryNamespaceResolver#resovleLibraryImport(java.net.URI,
+     *      java.lang.String, java.lang.String[])
      */
     @Override
-    public Collection<URL> resovleLibraryImport(URI libraryNamespace, String versionScheme,
-            String[] fileHints) {
+    public Collection<URL> resovleLibraryImport(URI libraryNamespace, String versionScheme, String[] fileHints) {
         Collection<URL> libraryUrls;
 
-        if (namespaceMappings.containsKey(libraryNamespace)) {
-            libraryUrls = namespaceMappings.get(libraryNamespace);
+        if (namespaceMappings.containsKey( libraryNamespace )) {
+            libraryUrls = namespaceMappings.get( libraryNamespace );
         } else {
-            libraryUrls = super.resovleLibraryImport(libraryNamespace, versionScheme, fileHints);
+            libraryUrls = super.resovleLibraryImport( libraryNamespace, versionScheme, fileHints );
         }
         return libraryUrls;
     }
@@ -58,61 +58,54 @@ public class MapLibraryNamespaceResolver extends DefaultLibraryNamespaceResolver
     /**
      * Adds a library module namespace mapping to the catalog.
      * 
-     * @param libraryNamespace
-     *            the library module namespace URI
-     * @param libraryUrl
-     *            the URL of the library module
+     * @param libraryNamespace the library module namespace URI
+     * @param libraryUrl the URL of the library module
      */
     public void addNamespaceMapping(URI libraryNamespace, URL libraryUrl) {
         if (libraryNamespace == null) {
-            throw new NullPointerException("Library namespace URI cannot be null.");
+            throw new NullPointerException( "Library namespace URI cannot be null." );
         }
         if (libraryUrl == null) {
-            throw new NullPointerException("Library URL cannot be null.");
+            throw new NullPointerException( "Library URL cannot be null." );
         }
         namespaceMappings.computeIfAbsent( libraryNamespace, ns -> namespaceMappings.put( ns, new ArrayList<>() ) );
-        List<URL> urlList = namespaceMappings.get(libraryNamespace);
+        List<URL> urlList = namespaceMappings.get( libraryNamespace );
 
-        if (!urlList.contains(libraryUrl)) {
-            urlList.add(libraryUrl);
+        if (!urlList.contains( libraryUrl )) {
+            urlList.add( libraryUrl );
         }
     }
 
     /**
      * Adds a library module namespace mapping to the catalog.
      * 
-     * @param libraryNamespace
-     *            the library module namespace URI
-     * @param libraryUrl
-     *            the URL of the library module
-     * @throws URISyntaxException
-     *             thrown if the namespace URI is badly-formed
-     * @throws MalformedURLException
-     *             thrown if the module URL is badly-formed
+     * @param libraryNamespace the library module namespace URI
+     * @param libraryUrl the URL of the library module
+     * @throws URISyntaxException thrown if the namespace URI is badly-formed
+     * @throws MalformedURLException thrown if the module URL is badly-formed
      */
     public void addNamespaceMapping(String libraryNamespace, String libraryUrl)
-            throws URISyntaxException, MalformedURLException {
+        throws URISyntaxException, MalformedURLException {
         if ((libraryUrl != null) && (libraryUrl.length() > 0)) {
-            if (libraryUrl.startsWith(".")) {
-                addNamespaceMapping(new URI(libraryNamespace),
-                        URLUtils.getResolvedURL(libraryUrl, getRelativeUrlBase()));
+            if (libraryUrl.startsWith( "." )) {
+                addNamespaceMapping( new URI( libraryNamespace ),
+                    URLUtils.getResolvedURL( libraryUrl, getRelativeUrlBase() ) );
 
             } else {
-                addNamespaceMapping(new URI(libraryNamespace),
-                        URLUtils.normalizeUrl(new URL(libraryUrl)));
+                addNamespaceMapping( new URI( libraryNamespace ), URLUtils.normalizeUrl( new URL( libraryUrl ) ) );
             }
         }
     }
 
     /**
-     * Returns the base file path to use for resolving relative URL's. The default implementation
-     * returns the URL location identified by the "user.dir" system property. Sub-classes may
-     * override if an alternate base path is required.
+     * Returns the base file path to use for resolving relative URL's. The default implementation returns the URL
+     * location identified by the "user.dir" system property. Sub-classes may override if an alternate base path is
+     * required.
      * 
      * @return URL
      */
     protected URL getRelativeUrlBase() {
-        return URLUtils.toURL(new File(System.getProperty("user.dir")));
+        return URLUtils.toURL( new File( System.getProperty( "user.dir" ) ) );
     }
 
 }
